# Predictive-alerting-for-cloud-metrics

./: .gitignore  README.md  example_train.py  pyproject.toml  sweep.py
data/processed/: aws_two_series_training.parquet
experiments/: sweep_baseline.py  sweep_inception.py  train_baseline.py  train_inception.py
experiments/baseline/: sweep_baseline.py  train_baseline.py
experiments/inception/: sweep_inception.py  train_inception.py
notebooks/: 01_eda.ipynb  02_experiments.ipynb  02_results.ipynb  eda_experiments.ipynb
src/: data.py  evaluate.py  model.py  train.py
src/data/: datasets.py  features.py  loading.py  windowing.py
src/predictive_alerting/: __init__.py  dataset_builder.py
tests/: test_make_incident_windows.py  test_training_table.py
